--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/StartScreen.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/StartScreen.mxml
@@ -30,7 +30,7 @@
     		import org.openwms.web.flex.client.event.SwitchScreenEvent;
 import org.openwms.web.flex.client.event.UserEvent;
 import org.openwms.web.flex.client.model.ModelLocator;
-import org.openwms.web.flex.client.service.ModuleLocator;
+import org.openwms.web.flex.client.module.ModuleLocator;
 
     	]]>
     </mx:Script>
