--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/ModuleManagementView.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/ModuleManagementView.mxml
@@ -28,7 +28,7 @@
             
             import mx.collections.ArrayCollection;
             import mx.binding.utils.BindingUtils;
-            import org.openwms.web.flex.client.service.ModuleLocator;
+            import org.openwms.web.flex.client.module.ModuleLocator;
             import org.openwms.common.domain.Module;
             import org.openwms.web.flex.client.event.ApplicationEvent;
             import org.openwms.web.flex.client.model.ModelLocator;
