--- a/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/CommonApp.mxml
+++ b/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/CommonApp.mxml
@@ -21,21 +21,21 @@
  * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
  */
 -->
-<view:CommonModule xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:module="org.openwms.web.flex.client.module.*"
-    xmlns:view="org.openwms.web.flex.client.common.view.*" layout="absolute" width="400" height="300" implements="org.openwms.web.flex.client.IApplicationModule">
-
-    <mx:Script source="Runner.as" />
+<view:CommonAppBase xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:module="org.openwms.web.flex.client.module.*"
+    xmlns:view="org.openwms.web.flex.client.common.view.*">
+    
+    <mx:Script>
+    	<![CDATA[
+    		import org.openwms.web.flex.client.event.SwitchScreenEvent;
+    		import org.openwms.web.flex.client.model.ModelLocator;
+    	]]>
+    </mx:Script>
 
     <mx:VBox height="100%" width="100%" verticalGap="0" backgroundColor="#C2DAEF">
         <mx:Canvas width="100%" height="25"  backgroundSize="100%">
             <mx:MenuBar id="commonMenuBar" labelField="@label">
                 <mx:XMLList>
-                    <menuitem label="Administration">
-                        <menuitem label="Users" action="{SwitchScreenEvent.SHOW_USER_MGMT_VIEW}" />
-                        <menuitem label="Roles" action="{SwitchScreenEvent.SHOW_USER_MGMT_VIEW}" />
-                        <menuitem label="Security" action="{SwitchScreenEvent.SHOW_USER_MGMT_VIEW}" />
-                    </menuitem>
-                    <menuitem label="Stock Configuration">
+                    <menuitem label="Stock Configuration" targetPos="2">
                         <menuitem label="Transport Units" action="{SwitchScreenEvent.SHOW_TRANSPORTUNIT_VIEW}" />
                         <menuitem label="Locations" action="{SwitchScreenEvent.SHOW_LOCATION_VIEW}" />
                         <menuitem label="Users" action="{SwitchScreenEvent.SHOW_USER_MGMT_VIEW}" />
@@ -45,12 +45,12 @@
             </mx:MenuBar>
         </mx:Canvas>
         <mx:HBox width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
-            <mx:ViewStack id="commonViewStack" selectedIndex="{modelLocator.mainViewStackIndex}">
-                <view:LocationView />
-                <view:LocationGroupView />
-                <view:TransportUnitView />
+            <mx:ViewStack id="commonViewStack" selectedIndex="{ModelLocator.getInstance().mainViewStackIndex}">
+                <view:LocationView id="locationView" />
+                <view:LocationGroupView id="locationGroupView" />
+                <view:TransportUnitView id="transportUnitView" />
             </mx:ViewStack>
         </mx:HBox>
     </mx:VBox>
 
-</module:CommonModule>
+</view:CommonAppBase>
