--- a/org.openwms/trunk/source/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/TMSApp.mxml
+++ b/org.openwms/trunk/source/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/TMSApp.mxml
@@ -28,10 +28,10 @@
 		<mx:Canvas width="100%" height="25" backgroundSize="100%">
 			<mx:MenuBar id="tmsMenuBar" labelField="@label">
 				<mx:XMLList>
-					<menuitem label="Transport Management">
+					<menuitem label="Transport Management" target="3">
 						<menuitem label="Transport Orders" enabled="true" />
 					</menuitem>
-					<menuitem label="Transport Order Management" targetPos="2">
+					<menuitem label="Transport Order Management" targetPos="4">
 						<menuitem label="Transport Orders" enabled="true" />
 					</menuitem>
 				</mx:XMLList>
