--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/App.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/App.mxml
@@ -28,10 +28,9 @@
     <mx:Script>
     	<![CDATA[
     		import org.openwms.web.flex.client.event.SwitchScreenEvent;
-import org.openwms.web.flex.client.event.UserEvent;
-import org.openwms.web.flex.client.model.ModelLocator;
-import org.openwms.web.flex.client.module.ModuleLocator;
-
+            import org.openwms.web.flex.client.event.UserEvent;
+            import org.openwms.web.flex.client.model.ModelLocator;
+            import org.openwms.web.flex.client.module.ModuleLocator;
     	]]>
     </mx:Script>
 
@@ -42,9 +41,6 @@ import org.openwms.web.flex.client.module.ModuleLocator;
 	<!-- Services -->
 	<business:Services />
 
-	<!-- 
-	<control:MainController />
- -->
 	<mx:VBox height="100%" width="100%" verticalGap="0" backgroundColor="#C2DAEF">
 		<mx:Canvas width="100%" height="66" backgroundImage="@Embed(source='assets/images/openwms_banner.jpg')" backgroundSize="100%">
 			<mx:Image source="@Embed('assets/images/openwms_header.png')" />
@@ -71,14 +67,9 @@ import org.openwms.web.flex.client.module.ModuleLocator;
 		<mx:HBox width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
 		<mx:ViewStack id="myViewStack" selectedIndex="{loginView.authenticated ? modelLocator.mainViewStackIndex : modelLocator.mainViewStackIndex}" width="100%" height="100%">
             <view:LoginView id="loginView" onLogin="login" cornerRadius="20" borderStyle="solid" alpha="1.0" borderThickness="3"/>
-            <view:EmptyScreenView />
-            <view:ModuleManagementView />
-<!-- 
-			<view:LocationView />
-			<view:LocationGroupView />
-            <view:TransportUnitView />
- -->
- 			<view:UserManagementView />
+            <view:EmptyScreenView id="emptyScreenView" />
+            <view:ModuleManagementView id="moduleManagementView" />
+ 			<view:UserManagementView id="userManagementView" />
 		</mx:ViewStack>
         </mx:HBox>
 	</mx:VBox>
