--- a/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/CommonApp.mxml
+++ b/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/CommonApp.mxml
@@ -46,9 +46,9 @@
         </mx:Canvas>
         <mx:HBox width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
             <mx:ViewStack id="commonViewStack" selectedIndex="{ModelLocator.getInstance().mainViewStackIndex}">
-                <view:LocationView id="locationView" />
-                <view:LocationGroupView id="locationGroupView" />
-                <view:TransportUnitView id="transportUnitView" />
+                <view:LocationView name="locationView" />
+                <view:LocationGroupView name="locationGroupView" />
+                <view:TransportUnitView name="transportUnitView" />
             </mx:ViewStack>
         </mx:HBox>
     </mx:VBox>
