--- a/org.openwms/trunk/source/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/TMSApp.mxml
+++ b/org.openwms/trunk/source/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/TMSApp.mxml
@@ -39,7 +39,7 @@
 		</mx:Canvas>
 		<mx:HBox width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
 			<mx:ViewStack id="myViewStack" selectedIndex="{modelLocator.mainViewStackIndex}">
-				<view:TransportOrderView id="transportOrderView" />
+				<view:TransportOrderView name="transportOrderView" />
 			</mx:ViewStack>
 		</mx:HBox>
 	</mx:VBox>
