--- a/org.openwms/trunk/source/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/TMSApp.mxml
+++ b/org.openwms/trunk/source/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/TMSApp.mxml
@@ -23,23 +23,26 @@
 -->
 <view:TMSAppBase xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:module="org.openwms.web.flex.client.module.*"
 	xmlns:view="org.openwms.web.flex.client.tms.view.*">
+	
+	<mx:Script>
+		<![CDATA[
+			import org.openwms.web.flex.client.tms.event.TMSSwitchScreenEvent;
+		]]>
+	</mx:Script>
 
 	<mx:VBox height="100%" width="100%" verticalGap="0" backgroundColor="#C2DAEF">
 		<mx:Canvas width="100%" height="25" backgroundSize="100%">
 			<mx:MenuBar id="tmsMenuBar" labelField="@label">
 				<mx:XMLList>
-					<menuitem label="Transport Management" target="3">
-						<menuitem label="Transport Orders" enabled="true" />
-					</menuitem>
 					<menuitem label="Transport Order Management" targetPos="4">
-						<menuitem label="Transport Orders" enabled="true" />
+						<menuitem label="Transport Orders" enabled="true" action="{TMSSwitchScreenEvent.SHOW_TRANSPORT_ORDERS_VIEW}"/>
 					</menuitem>
 				</mx:XMLList>
 			</mx:MenuBar>
 		</mx:Canvas>
 		<mx:HBox width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
-			<mx:ViewStack id="myViewStack" selectedIndex="{modelLocator.mainViewStackIndex}">
-				<view:TransportOrderView name="transportOrderView" />
+			<mx:ViewStack id="tmsViewStack" selectedIndex="{modelLocator.mainViewStackIndex}">
+				<view:TransportOrderView name="tmsTransportOrdersView" />
 			</mx:ViewStack>
 		</mx:HBox>
 	</mx:VBox>
