--- a/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/TransportUnitView.mxml
+++ b/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/TransportUnitView.mxml
@@ -49,7 +49,7 @@
     	]]>
 	</mx:Script>
 
-	<mx:VBox x="10" y="10" width="908" height="592">
+	<mx:VBox x="10" y="10" width="100%" height="592">
 		<mx:HBox width="908">
 			<mx:Button id="userAddBtn" label="Add" click="showCreateTransportUnitDialog()"/>
 			<mx:Button id="userSaveBtn" label="Save" />
