--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/business/Services.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/business/Services.mxml
@@ -41,4 +41,7 @@
 <mx:RemoteObject id="userService" destination="userService" showBusyCursor="true" />
 <mx:RemoteObject id="transportUnitService" destination="transportUnitService" showBusyCursor="true" />
 <mx:RemoteObject id="moduleManagementService" destination="moduleManagementService" showBusyCursor="true" />
+
+
+<mx:RemoteObject id="transportService" destination="transportService" showBusyCursor="true" />
 </business:ServiceLocator>
