--- a/org.openwms/trunk/source/org.openwms.client.flex.lib/src/main/flex/org/openwms/web/flex/client/component/LocationSelector.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.lib/src/main/flex/org/openwms/web/flex/client/component/LocationSelector.mxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:VBox xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:component="org.openwms.web.flex.client.common.component.*">
+<mx:VBox xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:component="org.openwms.web.flex.client.component.*">
 
     <mx:HBox>
         <component:LocationFieldSelector label2="AREA" />
