--- a/org.openwms/trunk/source/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/dialogs/CreateTransportOrderDialog.mxml
+++ b/org.openwms/trunk/source/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/dialogs/CreateTransportOrderDialog.mxml
@@ -75,17 +75,17 @@
     </mx:Script>
 
 	<mx:Canvas width="100%" height="100%">
-		<mx:Label id="barcodeTxt" x="10" y="10" text="Transport Unit" fontSize="24"/>
-		<mx:Label x="9" y="80" text="Priority" fontSize="24"/>
+		<mx:Label x="10" y="10" text="Transport Unit" fontSize="24"/>
+		<comp:SimpleTransportUnitSelector id="barcodeTxt" x="195" y="10" width="259" fontSize="24"/>
+        <mx:Label x="9" y="80" text="Priority" fontSize="24"/>
 		<mx:Canvas x="9" y="151" width="445" height="229" backgroundColor="#F1F07C">
 			<mx:CheckBox id="targetLocationGroupChk" x="10" y="10" label="Target Location Group" selected="true" fontSize="24" />
-            <mx:ComboBox id="targetLocationGroupCmb" x="53" y="57" fontSize="24" width="382" dataProvider="{getListAsComboBoxList(modelLocator.allLocationGroups)}" enabled="{targetLocationGroupChk.selected}" />
+			<mx:ComboBox id="targetLocationGroupCmb" x="53" y="57" fontSize="24" width="382" dataProvider="{getListAsComboBoxList(modelLocator.allLocationGroups)}" enabled="{targetLocationGroupChk.selected}" />
 			<mx:CheckBox id="targetLocationChk" x="10" y="104" label="Target Location" selected="false" fontSize="24" />
             <comp:LocationSelector id="targetLocationCmb" x="53" y="151" enabled="{targetLocationChk.selected}"/>
 		</mx:Canvas>
 		<mx:Button id="createBtn" x="10" y="388" label="Create" fontSize="12" click="createTransportOrder()"/>
 		<mx:Button id="cancelBtn" x="384" y="388" label="Cancel" fontSize="12" click="closeDialog(event)"/>
-        <mx:ComboBox id="barcodeCmb" x="195" y="10" fontSize="24" width="259" />
 		<mx:ComboBox id="priorityCmb" x="195" y="77" fontSize="24" width="259" />
 	</mx:Canvas>
 </mx:Panel>
