--- a/org.openwms/trunk/source/org.openwms.client.flex.lib/src/main/flex/org/openwms/web/flex/client/component/LocationSelector.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.lib/src/main/flex/org/openwms/web/flex/client/component/LocationSelector.mxml
@@ -1,11 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:VBox xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:component="org.openwms.web.flex.client.component.*">
+<mx:VBox xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:comp="org.openwms.web.flex.client.component.*">
 
-    <mx:HBox>
-        <component:LocationFieldSelector label2="AREA" />
-        <component:LocationFieldSelector label2="AISLE"/>
-        <component:LocationFieldSelector label2="X"/>
-        <component:LocationFieldSelector label2="Y"/>
-        <component:LocationFieldSelector label2="Z"/>
-    </mx:HBox>  
+    <mx:Script>
+    	<![CDATA[
+    		
+            import org.openwms.web.flex.client.model.ModelLocator;
+
+            [Bindable]
+            public var value:String;
+            [Bindable]
+            public var labelText:String;
+
+            [Bindable]
+            private var modelLocator:ModelLocator = ModelLocator.getInstance();
+            private var all:Array = modelLocator.allLocations.toArray();
+            private var regEx:RegExp;
+            
+            private function check():void
+            {
+                var i:int =0;
+                var temp:Array = all.filter(filter);
+                inputTxt.text = temp[0];
+            }
+            
+            private function filter(element:*, index:int, arr:Array):Boolean
+            {
+                regEx = new RegExp(inputTxt.text);
+                return (regEx.test(element as String));
+            }
+    	]]>
+    </mx:Script>
+
+    <comp:SuggestComboBox id="inputTxt" width="70" fontSize="24" text="{value}"/>
 </mx:VBox>
